# Reversi

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Checker.cpp  Checker.h  ConsoleGameOperator.cpp  ConsoleGameOperator.h  Disk.cpp  Disk.h  Flow.cpp  Flow.h  GamePlay.cpp  GamePlay.h  GameResult.cpp  GameResult.h  GameSettings.xml  GeneralGameOperator.cpp  GeneralGameOperator.h  IGui.cpp  IGui.h  IPlayer.cpp  IPlayer.h  IRuleEnricher.cpp  IRuleEnricher.h  Logic.cpp  Logic.h  NormalRuleset.cpp  NormalRuleset.h  Player.cpp  Player.h  RegularPlayer.h  RowOccupationContainer.cpp  RowOccupationContainer.h  StandardRuleEnricher.cpp  StandardRuleEnricher.h  a.out  main.cpp  makefile
Desktop/EX4/exe/: client.out  server.out
Desktop/EX4/src/server/: makefile
exe/: client.out  server.out
include/: AIPlayer.h  Board.h  Checker.h  ConsoleGui.h  Flow.h  GameResult.h  IGui.h  IPlayer.h  Logic.h  NormalRuleset.h  RegularPlayer.h  RemoteOnlinePlayer.h
lib/googletest-release-1.8.0/googlemock/test/: gmock-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-internal-utils_test.cc  gmock_all_test.cc  gmock_stress_test.cc
lib/googletest-release-1.8.0/googletest/samples/: sample4_unittest.cc
lib/googletest-release-1.8.0/googletest/test/: gtest-test-part_test.cc  gtest-tuple_test.cc  gtest-typed-test2_test.cc  (+10 more)
server/: makefile
server/include/: CommandsManager.h  ConfigReader.h  PlayCommand.h  Player.h
server/src/: CommandManager.cpp  ConfigReader.cpp  Game.cpp  JoinCommand.cpp  ListGamesCommand.cpp  PlayCommand.cpp  Player.cpp  StartCommand.cpp  main.cpp
src/: AIPlayer.cpp  Board.cpp  Board.h  Checker.cpp  Checker.h  ConsoleGui.cpp  ConsoleGui.h  Flow.cpp  Flow.h  GameResult.cpp  IGui.cpp  IPlayer.cpp  LocalOnlinePlayer.cpp  Logic.cpp  Logic.h  NormalRuleset.cpp  NormalRuleset.h  RegularPlayer.cpp  main.cpp  test.txt
src/client/include/: ConfigReader.h  IPlayer.h  LocalOnlinePlayer.h  NormalRuleset.h  OnlineFlow.h  ReversiClient.h
src/client/src/: ConfigReader.cpp  ConsoleGui.cpp  IGui.cpp  LocalOnlinePlayer.cpp  OnlineFlow.cpp  RemoteOnlinePlayer.cpp  ReversiClient.cpp  main.cpp
src/game/: GameController.java
src/logic/: Board.java  Checker.java  IPlayer.java  Logic.java  NormalRuleset.java  Position.java  RegularPlayer.java
src/main/: GameSettings.xml  Main.java  MainController.java  ReversiSettings.java  SettingsController.java
src/server/include/: CloseCommand.h  Command.h  ConfigReader.h  Game.h  JoinCommand.h  ListGamesCommand.h  Server.h  StartCommand.h  Task.h  ThreadPool.h
src/server/src/: CloseCommand.cpp  CommandManager.cpp  ConfigReader.cpp  PlayCommand.cpp  Player.cpp  Server.cpp  ThreadPool.cpp  main.cpp
test/include/: ConfigReaderTest.h  NormalRulesetTest.h
test/src/: ConfigReaderTest.cpp
tests/: LogicFlipTest.cpp  NormalRulesetTest.cpp  main.cpp
tests/include/: LogicFlipTest.h  NormalRulesetTest.h
(+70 files in other folders)
